--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -688,7 +688,7 @@ Table~\ref{tab:megatable} shows the results of 48 hours of consecutive testing f
 
 % Total CLSmith test cases ran: 285077
 % Total DeepSmith test cases ran: 1821311
-An average of 29k CLSmith and 182k DeepSmith test cases were evaluated on each device, with an average time per test case of 12.1s and 1.90s respectively. The XX-fold increase in testing throughput achieved by DeepSmith is a result of XXX. Figure~\ref{fig:vs-clsmith}a shows the times taken to generate and execute test cases, excluding timeouts. DeepSmith generation time is proportional to program length. For Clsmith, generation time depends on the number of rejections which are required before production of statically verified code is correct \cc{ldots}.
+Each testbed evaluated an average of 29k CLSmith and 182k DeepSmith test cases, with an average time per test case of 12.1s and 1.90s respectively. The sixfold increase in testing throughput achieved by DeepSmith is a result of XXX. Figure~\ref{fig:vs-clsmith}a shows the times taken to generate and execute test cases, excluding timeouts. DeepSmith generation time is proportional to program length. For Clsmith, generation time depends on the number of rejections which are required before production of statically verified code is correct \cc{\ldots}.
 
 Optimization level generally does not affect testing throughput significantly, with the exception of testbed $7+$, in which the slow compilation of kernels containing structs greatly reduces the number of test cases evaluated. This is a result of CLSmith's heavy reliance on structs, and is a known issue --- in XX the authors omit testing on this testbed for this reason. ``Compilation for the Xeon Phi co-processor is prohibitively slow when relatively large structs are used with op- timizations enabled.''
 
