--- a/sec/related_work.tex
+++ b/sec/related_work.tex
@@ -53,7 +53,7 @@ TODO~\cite{White2016},~\cite{Sheridan2007}.
 
 Grammar-base whitebox testing~\cite{Godefroid2008a}.
 
-Our work is the first to address the challenge of generating human-like, plausible random programs.
+Our unique contribution is a low cost method for fuzzing, capable of detecting a wide range of errors, and matching that of human expectation (small, plausible test cases).
 
 \paragraph{GPU Testing} GPU Concurrency --- Small \emph{litmus tests}~\cite{Alglave2015}.
 
