--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -674,7 +674,7 @@ We ran each program generator using its default configuration for 48 hours on ea
   \includegraphics[width=\columnwidth]{build/img/vs-clsmith}%
   \vspace{-1em}
   \caption{%
-    Comparison of (a) runtimes and (b) test case sizes. DeepSmith test cases are on average evaluated $3.03\times$ faster than CLSmith ($2.45\times$, and $4.46\times$ for generation and execution, respectively), and are two orders of magnitude smaller.
+    Comparison of runtimes and test case sizes. DeepSmith test cases are on average evaluated $3.03\times$ faster than CLSmith ($2.45\times$, and $4.46\times$ for generation and execution, respectively), and are two orders of magnitude smaller.
     % Runtimes, excluding timeouts. .%
 %    Total speedup is 3.03x
 %    CLgen generation is 2.45x faster than CLSmith
