--- a/sec/intro.tex
+++ b/sec/intro.tex
@@ -8,7 +8,7 @@
 \noindent
 Compilers are a fundamental trusted technology. Bugs in them are particularly harmful. They can introduce extremely hard to identify errors in the generated binary. If we detect them early, this just increases development costs. If not, this can cause runtime failures in even carefully tested software. Identifying such bugs before compiler release is of critical importance but is not a straightforward task. Modern optimizing compilers are large and complex programs; fixed test suites are inadequate for ensuring correct behavior over the broad range of possible inputs. \am{It's not just broad, it's infinite, though I don't know if the distinction matters for the paper.}-
 
-Random test case generation --- \emph{fuzzing} --- is an effective method for identifying compiler bugs~\cite{Chen2014a,Kossatchev2005,Chen2013}. When fuzzing, randomly generated valid or semi-valid code is fed to the compiler. Any kind of unexpected behavior, including crashes, freezes, or wrong binaries, indicates a compiler bug. While crashes and freezes are easy to detect, telling correct from wrong output with absolute certainty is not possible in this scenario. The best we can do is Differential Testing. The generated code and a set of inputs, the \emph{test case}, is compiled and executed on multiple \emph{testbeds}. If the test case output of differs between testbeds, then a potential bug has been discovered.
+Random test case generation --- \emph{fuzzing} --- is a well established and effective method for identifying compiler bugs~\cite{Chen2014a,Kossatchev2005,Chen2013}. When fuzzing, randomly generated valid or semi-valid code is fed to the compiler. Any kind of unexpected behavior, including crashes, freezes, or wrong binaries, indicates a compiler bug. While crashes and freezes are easy to detect, telling correct from wrong output with absolute certainty is not possible in this scenario. The best we can do is Differential Testing. The generated code and a set of inputs, the \emph{test case}, is compiled and executed on multiple \emph{testbeds}. If the test case output of differs between testbeds, then a potential bug has been discovered.
 
 Compiler fuzzing boils down to efficiently generating test cases that trigger compiler bugs. The state of the art approach, CSmith~\cite{Yang2011}, generates large random programs by defining and sampling a probabilistic grammar which covers a large subset of the C programming language. Through this grammar, CSmith ensures that the generated code easily passes the compiler front-end and stresses the most complex part of the compiler, the middle end. A complex static and dynamic analysis makes sure that programs are free from undefined behavior. The programs are then differentially tested.
 
@@ -42,7 +42,7 @@ What we propose is a fast, easy, and low effort approach to the generation of ra
 
 %Using a corpus of handwritten code in a particular programming language, we use deep neural networks to automatically construct probabilistic models for how humans write programs. The neural networks, without prior knowledge, infer both the syntax and semantics of the programming language and the common constructs and patterns. By framing the generation of random programs as a language modeling problem, we greatly simplify the process of program generation, and the expressiveness of generated programs is limited only by what is contained in the corpus. Such a corpus can readily be assembled from open source repositories.
 
-Our implementation, DeepSmith, targets OpenCL, an open standard for programming heterogeneous systems, though our approach is language agnostic. We chose OpenCL for three reasons: it is an emerging standard with the challenging promise of portability across a diverse range of heterogeneous hardware; OpenCL is compiled ``online'', meaning that compiler defects may not be discovered until a product is deployed to customers; and there has already been extensive work in hand written random program generators for OpenCL. 
+Our implementation, DeepSmith, targets OpenCL, an open standard for programming heterogeneous systems, though our approach is language agnostic. We chose OpenCL for three reasons: it is an emerging standard with the challenging promise of functional portability across a diverse range of heterogeneous hardware; OpenCL is compiled ``online'', meaning that compiler defects may not be discovered until a product is deployed to customers; and there has already been extensive work in hand written random program generators for OpenCL \cc{we need to change this last point. There's only OpenCL tester (CLSmith), vs. dozens for C/C++}.
 
 %OpenCL is a hard programming language to test \cc{DELETE ME, not ``hard''} --- the data-parallel programming model increases the complexity of static and dynamic analysis, further limiting the expressiveness of grammar-based approaches.
 
@@ -83,6 +83,6 @@ We make the following contributions:
 \item a novel, automatic, and fast approach for the generation of expressive random programs for compiler fuzzing. We \emph{infer} programming language syntax, structure, and use from real-world examples, not through an expert-defined grammar; % CLSmith requires expert-driven development for every language feature supported. 40+k lines of C++ vs a few hundred lines of Python.
 \item through syntactic modeling of handwritten programs, we discover bugs in compilers which prior works are unable to, covering more components of the compiler;
 % e.g. ill-formed
-\item we find bugs faster than the state-of-the-art. In 48 hours we discovered and reported XX bugs in compiler and open source OpenCL implementations, XX\% more than CLSmith over the same time period;
+\item we find bugs faster than the state-of-the-art. \cc{I'm not sure that we can back this up. CLSmith provides a larger number of ``interesting'' test cases, but there are dupes \& false positives} In 48 hours we discovered and reported XX bugs in compiler and open source OpenCL implementations, XX\% more than CLSmith over the same time period;
 \item in modeling real handwritten code, our test cases are more interpretable than other approaches. Average test case size is two orders of magnitude smaller than state-of-the-art;
 \end{itemize}
