--- a/sec/methodology.tex
+++ b/sec/methodology.tex
@@ -13,8 +13,8 @@
   \label{tab:platforms}
 \end{table*}
 
-We conducted testing of 10 OpenCL testbeds, summarized in Table~\ref{tab:platforms}. Each testbed consists of a \emph{<device, driver>} pair. We covered a broadest range of hardware: 3 GPUs, 4 CPUs, a co-processor, and an emulator. 7 of the compilers tested are commercial products, 3 of them are open source. Our suite of testbeds includes both combinations of different drivers for the same device, and different devices using the same driver.
+We conducted testing of 10 OpenCL testbeds, summarized in Table~\ref{tab:platforms}. Each testbed consists of a \emph{<device, driver>} pair. We covered a broad range of hardware: 3 GPUs, 4 CPUs, a co-processor, and an emulator. 7 of the compilers tested are commercial products, 3 of them are open source. Our suite of testbeds includes both combinations of different drivers for the same device, and different devices using the same driver.
 
 \subsection{Methodology}
 
-We run each generated test case twice, once with a single thread, and one with 2048 threads. We also run with and without compiler optimizations.
+We run each generated test case twice, once with a single thread, and one with 2048 threads. We also run with and without compiler optimizations. All machines were otherwise unloaded.
