--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -581,7 +581,7 @@ Figures~\ref{lst:intel-gt2-double-assertion} and~\ref{lst:beignet-scalarize-inse
 TODO: Testbed $3\pm$ assertion in \emph{gbe::GenEncoder::handleDouble}
 
 \paragraph{Parser Failures} %
-Parser development is a mature and well understood practise. To our surprise, we uncovered parser errors. For example, the following three code samples induce crash errors during parsing of compound statements in both Testbeds $5\pm$ and $7\pm$:
+Parser development is a mature and well understood practise. To our surprise, we uncovered parser errors. The following three code samples each induce crash errors during parsing of compound statements in both Testbeds $5\pm$ and $7\pm$:
 
 \begin{enumerate}
 % Hand reduction of a 40 line kernel:
@@ -662,7 +662,7 @@ Intel compilers will ocassionally emit a stack trace upon crashing, identifying 
 
 \paragraph{Nvidia silent segfaults} %
 
-Of the compilers we tested, Nvidia's are the least verbose. This makes identifying root causes more difficult. Figure~\ref{lst:nvidia-silent-segfaults} shows examples of crashes we identified as caused by pointer assignments. Without error messages and source code, we can only report a couple of errors and move on.
+Of the compilers we tested, Nvidia's are the least verbose. This makes identifying root causes more difficult. Figure~\ref{lst:nvidia-silent-segfaults} shows examples of crashes we identified as caused by pointer assignments. Without error messages and access to the compiler source code, we can only report a couple of errors and move on.
 
 
 \begin{figure}
@@ -729,15 +729,12 @@ To date we have identified 207 distinct cases which trigger unreachable code fai
 \paragraph{Build Failures} %
 Some compilers are more permissive then others.
 
-%Figure~\ref{lst:intel-decl-doesnt-declare-anything}
-Empty declarations (e.g. \texttt{int;}) are rejected by some Intel compilers.
-
 Testbeds~$4\pm$, $6\pm$, $9\pm$ reject out-of-range literal values e.g. \texttt{int i = 0xFFFFFFFFFFFFFFFFFFFFFFFF}, whilst testbeds $3\pm$, $5\pm$, $7\pm$, $8\pm$, and $10\pm$ interpret the literal as an \texttt{unsigned long long} and implicitly cast to an integer value (-1); testbeds $1\pm$, $2\pm$ omit no warning.
 
-Testbeds $1\pm$, $2\pm$, $3\pm$ rejects address space qualifiers on automatic variables.
+Testbeds $1\pm$, $2\pm$, $3\pm$ rejects address space qualifiers on automatic variables. \cc{always? or just the one constant example}
 
 % T3± mad24() result ID: 891687
-On Testbed~$3\pm$, the statment \texttt{int n = mad24(a, (32), get\_global\_size(0));} is rejected as ambiguous.
+On Testbed~$3\pm$, the statement \texttt{int n = mad24(a, (32), get\_global\_size(0));} (a call to a math builtin with mixed types) is rejected as ambiguous.
 
 
 \begin{figure}
@@ -765,11 +762,11 @@ On Testbed~$3\pm$, the statment \texttt{int n = mad24(a, (32), get\_global\_size
 
 Many compilers use a common Clang front-end. Perhaps that's why Figure~\ref{lst:almost-everything-crash} fails on so many testbeds.
 
-Using debug + assert builds over every LLVM release in the past 24 months, compile 75,000 DeepSmith kernels using clang frontend (no code generation, just lexer, parser, and typechecker).
+Using debug + assert builds of every LLVM release in the past 24 months, compile 75,000 DeepSmith kernels using clang frontend (no code generation, just lexer, parser, and typechecker).
 
-Figure~\ref{fig:clangs} shows the crash rate of Clang front-ends. Progress is good. There's a tenfold decrease in crash rate in 2 years. 
+Figure~\ref{fig:clangs} shows the crash rate of Clang front-ends. Progress is good. There's a tenfold decrease in crash rate in 2 years. \cc{Does that suggest that DeepSmith is finding bugs which developers are interested in fixing?} 
 
-Table~\ref{tab:clangs} shows whether each of 7 distinct assertions were raised. Assertion 1 (uncorrected typos) is raised on all compiler versions --- see Figure~\ref{lst:oclgrind-uncorrected-typos} for an example.
+Table~\ref{tab:clangs} shows whether each of 7 distinct assertions were raised. Assertion 1 (uncorrected typos) is raised on all compiler versions --- see Figure~\ref{lst:oclgrind-uncorrected-typos} for an example. This shows that compiler validation is a moving target. Release 6.0.0 has the second lowest crash rate, but is joint first in terms of the number of unique errors. Neither metric is perfect.
 
 TODO: Report the 5 distinct crashes in LLVM trunk.
 
@@ -804,7 +801,7 @@ TODO: What programs crash all versions? What programs are regressions?
 \end{figure}
 
 
-Extensive prior work by EMI/CSmith/SPE extensively stress-test middle-end to uncover miscompilations. Grammar based enumeration is highly effective at this task, yet is bounded by the expressiveness of the grammar. Here we provide examples of bugs which cannot currently be discovered by the state-of-the-art grammar approach.
+Extensive prior work on EMI/CSmith/SPE extensively stress-test middle-end to uncover miscompilations. Grammar based enumeration is highly effective at this task, yet is bounded by the expressiveness of the grammar. Here we provide examples of bugs which cannot currently be discovered by the state-of-the-art grammar approach.
 
 \paragraph{Thread-dependent Flow Control} CLSmith does not support this (because of the risk of barrier divergence).
 
@@ -882,7 +879,7 @@ We ran each program generator using its default configuration for 48 hours on ea
   \caption{%
     % CLSmith total ``interesting'': 19415
     % DeepSmith total ``interesting'': 8272
-    Results from 48 hours of testing using CLSmith and DeepSmith. Testbed \#. as per Table~\ref{tab:platforms}. $\pm$ denotes optimizations off ($-$) vs on ($+$). The remaining columns denote the number of build crash (\textbf{bc}), build timeout (\textbf{bto}), build failure (\textbf{bf}), runtime crash (\textbf{c}), timeout (\textbf{to}), and pass (\textbf{\cmark}) results. \cc{remove ``Total'' row for submission}%
+    Results from 48 hours of testing using CLSmith and DeepSmith. Testbed \#. as per Table~\ref{tab:platforms}. $\pm$ denotes optimizations off ($-$) vs on ($+$). The remaining columns denote the number of build crash (\textbf{bc}), build timeout (\textbf{bto}), build failure (\textbf{bf}), runtime crash (\textbf{c}), and pass (\textbf{\cmark}) results. \cc{remove ``Total'' row for submission}%
   }
   \label{tab:megatable}
 \end{table*}
@@ -910,7 +907,7 @@ Each testbed evaluated an average of 29k CLSmith and 182k DeepSmith test cases, 
 
 Optimization level generally does not affect testing throughput significantly, with the exception of testbed $7+$, in which the slow compilation of kernels containing structs greatly reduces the number of test cases evaluated. This is a result of CLSmith's heavy reliance on structs, and is a known issue --- in XX the authors omit testing on this testbed for this reason. ``Compilation for the Xeon Phi co-processor is prohibitively slow when relatively large structs are used with optimizations enabled.''
 
-83.8\% of CLSmith test cases produce a majority \textbf{\cmark} outcome. Proportionally, DeepSmith test cases are less likely to produce a majority pass at 47.9\% of the total. \cc{This includes compile-only test cases?}.
+% 83.8\% of CLSmith test cases produce a majority \textbf{\cmark} outcome. Proportionally, DeepSmith test cases are less likely to produce a majority pass at 47.9\% of the total. \cc{This includes compile-only test cases?}.
 
 
 \paragraph{Comparison of Test Cases}
@@ -1028,6 +1025,8 @@ DeepSmith also triggered \emph{unreachable!} compiler errors in 180 distinct tes
 The 2357 \textbf{bf} results for CLSmith on Testbeds $4\pm$ and $6\pm$ are all a result of compilers rejecting empty declarations, (e.g. \texttt{int;}) which CLSmith occasionally emits (XX\% of the total). This is a known CLSmith issue which will likely be addressed. DeepSmith also generated these statements, but with a much lower probability, given that it is an unusual construct. Only XX DeepSmith programs contain empty declarations.
 % https://github.com/ChrisLidbury/CLSmith/issues/7
 Similarly, Intel Testbeds 4--7 (but not 3) reject DeepSmith kernels which omit a type specified (e.g. \texttt{\_\_global* a}), whereas all other Testbeds (including 3) emit and warning and default to \texttt{int} type.
+
+CLSmith produced many \textbf{bto} results. Given the large kernel size, it is unclear how many of those are indefinite loops, vs.\ just running out of 60 seconds. The average size of CLSmith bto kernels is XX lines. In contrast, the average size of DeepSmith bto results is XX lines, allowing for rapid identification of the underlying problem.
 
 CLSmith generated 33 programs with wrong-outputs. DeepSmith generated 30. Over the course of testing, a combined $3.39 \times 10^8$ of CLSmith code was evaluated, compared to $3.76 \times 10^6$ lines of DeepSmith code. This provides CLSmith a greater potential to trigger miscompilations. For this reason, we believe our approach to be complimentary, with CLSmith providing targeted middle-end stress-testing, and DeepSmith providing a broader class of bugs.
 
